# fr-pmx-registry

./: Cargo.toml  build.rs
proto/: channel_strip.proto  input.proto  looper.proto  output.proto  output_stage.proto  plugin.proto  registry.proto
src/: client.rs  file_reader.rs  file_writer.rs  registry.rs  server.rs
